analysis: added basic log-returns descriptive stats and markdown title

--- a/notebooks/02_portfolio_construction.ipynb
+++ b/notebooks/02_portfolio_construction.ipynb
@@ -146,7 +146,7 @@
          "type": "float"
         }
        ],
-       "ref": "e51e5de0-fb6a-402c-b204-39ff12e9baa2",
+       "ref": "3b5e1d2b-50ff-4a44-b648-57ef0cd62a58",
        "rows": [
         [
          "2019-01-02 00:00:00",
@@ -1693,7 +1693,7 @@
          "type": "float"
         }
        ],
-       "ref": "a368a9ad-e10f-4c76-b781-e3892fcd0690",
+       "ref": "7da7768c-72d6-47ba-8031-082ba23fe1d4",
        "rows": [
         [
          "2019-01-02 00:00:00",
@@ -3222,7 +3222,7 @@
          "type": "float"
         }
        ],
-       "ref": "da48238d-7416-4189-9900-77a0aad271ca",
+       "ref": "0d1f956f-b8a3-4140-9293-ba8bc25f84f7",
        "rows": [
         [
          "2019-01-02 00:00:00",
@@ -3459,7 +3459,7 @@
          "type": "float"
         }
        ],
-       "ref": "71859bc8-a776-40d2-b16a-5e1fc6cd71d4",
+       "ref": "b9697502-c55c-4ccf-9eb6-c99324c14d00",
        "rows": [
         [
          "2020-04-20 00:00:00",
@@ -3611,7 +3611,7 @@
          "type": "float"
         }
        ],
-       "ref": "a348a786-fbef-4f66-9941-f45f6c3b3c71",
+       "ref": "873c709c-6b3c-4baf-85ad-0f408ecb26fe",
        "rows": [
         [
          "2019-01-03 00:00:00",
@@ -5044,7 +5044,7 @@
          "type": "integer"
         }
        ],
-       "ref": "2dcf287c-0176-4a46-9051-165f751df80e",
+       "ref": "a27fae20-e688-4eae-b74f-391abcfbc70b",
        "rows": [
         [
          "AMZN",
@@ -5154,6 +5154,559 @@
    "source": [
     "# Checking NaNs\n",
     "log_returns.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf8d0800",
+   "metadata": {},
+   "source": [
+    "#### **2.6 Statistic validation of log returns**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b999ace6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "AMZN",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "BZ",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "CL",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "EURUSD",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "FTSE",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "GBPUSD",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "GC",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "GSPC",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "IEF",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "IXIC",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "JPM",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MSFT",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "NG",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "NVDA",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ORCL",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "SI",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "TLT",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "USDJPY",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "0aff873f-e15b-4035-b6c6-9dd88febb58a",
+       "rows": [
+        [
+         "count",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0",
+         "1474.0"
+        ],
+        [
+         "mean",
+         "0.0007301325291297207",
+         "0.00045931161781129985",
+         "0.0006946421938034389",
+         "-6.443142340219626e-05",
+         "0.00014437375699017323",
+         "-6.9465851747524654e-06",
+         "0.0004862599181293876",
+         "0.0006139967196946842",
+         "-1.2414560963669998e-06",
+         "0.0007588097951155303",
+         "0.0007607809946090767",
+         "0.0010561771198267734",
+         "0.00016797455181995005",
+         "0.002569527900057143",
+         "0.000992201662270571",
+         "0.0004445606568960735",
+         "-0.00013551358436205912",
+         "0.00024891007257735567"
+        ],
+        [
+         "std",
+         "0.02186007652476589",
+         "0.026031587072114174",
+         "0.03228283172939002",
+         "0.004540957268801641",
+         "0.010559781244543435",
+         "0.005812752775750471",
+         "0.009882728313524616",
+         "0.012827391862256933",
+         "0.004830219548046618",
+         "0.015393674223922585",
+         "0.019492741643444923",
+         "0.018447904510315406",
+         "0.0447817451383367",
+         "0.03280595450147509",
+         "0.019560624844453117",
+         "0.020250311973358144",
+         "0.010877129104960439",
+         "0.005738640594629382"
+        ],
+        [
+         "min",
+         "-0.15139791287665308",
+         "-0.27575145668023454",
+         "-0.2822061341074852",
+         "-0.0281440807711631",
+         "-0.1151170613425157",
+         "-0.0423235851982379",
+         "-0.051069383720258016",
+         "-0.12765219747281742",
+         "-0.025392524472259308",
+         "-0.13149154641354951",
+         "-0.16210583869538794",
+         "-0.15945341095574544",
+         "-0.30047975442423097",
+         "-0.20397967174776957",
+         "-0.14497239943100557",
+         "-0.12385427663987778",
+         "-0.06901109686075305",
+         "-0.037961000252172625"
+        ],
+        [
+         "25%",
+         "-0.010711755053811903",
+         "-0.010812259248259565",
+         "-0.012832855781279292",
+         "-0.0026640171222816074",
+         "-0.004293067647022283",
+         "-0.0030618919469449024",
+         "-0.004210145054980792",
+         "-0.004626296956614507",
+         "-0.0027773642796979584",
+         "-0.006078897067520554",
+         "-0.007790466978337418",
+         "-0.007494775866114418",
+         "-0.02438199075845627",
+         "-0.015220157821481341",
+         "-0.00752136717189911",
+         "-0.009416379107505708",
+         "-0.006836998079837341",
+         "-0.002354984122333418"
+        ],
+        [
+         "50%",
+         "0.0009316575042984276",
+         "0.0020274795150354336",
+         "0.0021076607594963134",
+         "-4.1840824963137684e-05",
+         "0.0006669082418939963",
+         "-0.00012244457744056065",
+         "0.0006220622324090072",
+         "0.0010063358238823336",
+         "0.0",
+         "0.0014280364895043482",
+         "0.0009452452293533739",
+         "0.0012716491066802125",
+         "-0.0001104526154610185",
+         "0.003315575706893302",
+         "0.0012777759192801566",
+         "0.0007147348275521148",
+         "6.882488024356584e-05",
+         "0.00042104818511027827"
+        ],
+        [
+         "75%",
+         "0.012064124994181517",
+         "0.013448963158637663",
+         "0.015179620852003807",
+         "0.00262876850949216",
+         "0.005151613533860723",
+         "0.003080729068452028",
+         "0.0059471299981751335",
+         "0.007080581108586445",
+         "0.002734807172288721",
+         "0.009042160947465364",
+         "0.009497179257940254",
+         "0.010868940338419232",
+         "0.024414121581728298",
+         "0.020782864630201386",
+         "0.009490515397490486",
+         "0.009880537816818087",
+         "0.006307447436002197",
+         "0.0031148950841459427"
+        ],
+        [
+         "max",
+         "0.1269489157684572",
+         "0.19077403911622495",
+         "0.3196336300150674",
+         "0.01821134690851107",
+         "0.08666424617841197",
+         "0.03030790933040455",
+         "0.05777508425392426",
+         "0.08968323251796326",
+         "0.026074030470413043",
+         "0.08934696396191795",
+         "0.16562039797561087",
+         "0.13292890650377082",
+         "0.3817267493869263",
+         "0.21808792076371655",
+         "0.18587495382761532",
+         "0.08880039678799462",
+         "0.07250232459263814",
+         "0.02741549445032734"
+        ]
+       ],
+       "shape": {
+        "columns": 18,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AMZN</th>\n",
+       "      <th>BZ</th>\n",
+       "      <th>CL</th>\n",
+       "      <th>EURUSD</th>\n",
+       "      <th>FTSE</th>\n",
+       "      <th>GBPUSD</th>\n",
+       "      <th>GC</th>\n",
+       "      <th>GSPC</th>\n",
+       "      <th>IEF</th>\n",
+       "      <th>IXIC</th>\n",
+       "      <th>JPM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>NG</th>\n",
+       "      <th>NVDA</th>\n",
+       "      <th>ORCL</th>\n",
+       "      <th>SI</th>\n",
+       "      <th>TLT</th>\n",
+       "      <th>USDJPY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "      <td>1474.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.000730</td>\n",
+       "      <td>0.000459</td>\n",
+       "      <td>0.000695</td>\n",
+       "      <td>-0.000064</td>\n",
+       "      <td>0.000144</td>\n",
+       "      <td>-0.000007</td>\n",
+       "      <td>0.000486</td>\n",
+       "      <td>0.000614</td>\n",
+       "      <td>-0.000001</td>\n",
+       "      <td>0.000759</td>\n",
+       "      <td>0.000761</td>\n",
+       "      <td>0.001056</td>\n",
+       "      <td>0.000168</td>\n",
+       "      <td>0.002570</td>\n",
+       "      <td>0.000992</td>\n",
+       "      <td>0.000445</td>\n",
+       "      <td>-0.000136</td>\n",
+       "      <td>0.000249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.021860</td>\n",
+       "      <td>0.026032</td>\n",
+       "      <td>0.032283</td>\n",
+       "      <td>0.004541</td>\n",
+       "      <td>0.010560</td>\n",
+       "      <td>0.005813</td>\n",
+       "      <td>0.009883</td>\n",
+       "      <td>0.012827</td>\n",
+       "      <td>0.004830</td>\n",
+       "      <td>0.015394</td>\n",
+       "      <td>0.019493</td>\n",
+       "      <td>0.018448</td>\n",
+       "      <td>0.044782</td>\n",
+       "      <td>0.032806</td>\n",
+       "      <td>0.019561</td>\n",
+       "      <td>0.020250</td>\n",
+       "      <td>0.010877</td>\n",
+       "      <td>0.005739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-0.151398</td>\n",
+       "      <td>-0.275751</td>\n",
+       "      <td>-0.282206</td>\n",
+       "      <td>-0.028144</td>\n",
+       "      <td>-0.115117</td>\n",
+       "      <td>-0.042324</td>\n",
+       "      <td>-0.051069</td>\n",
+       "      <td>-0.127652</td>\n",
+       "      <td>-0.025393</td>\n",
+       "      <td>-0.131492</td>\n",
+       "      <td>-0.162106</td>\n",
+       "      <td>-0.159453</td>\n",
+       "      <td>-0.300480</td>\n",
+       "      <td>-0.203980</td>\n",
+       "      <td>-0.144972</td>\n",
+       "      <td>-0.123854</td>\n",
+       "      <td>-0.069011</td>\n",
+       "      <td>-0.037961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-0.010712</td>\n",
+       "      <td>-0.010812</td>\n",
+       "      <td>-0.012833</td>\n",
+       "      <td>-0.002664</td>\n",
+       "      <td>-0.004293</td>\n",
+       "      <td>-0.003062</td>\n",
+       "      <td>-0.004210</td>\n",
+       "      <td>-0.004626</td>\n",
+       "      <td>-0.002777</td>\n",
+       "      <td>-0.006079</td>\n",
+       "      <td>-0.007790</td>\n",
+       "      <td>-0.007495</td>\n",
+       "      <td>-0.024382</td>\n",
+       "      <td>-0.015220</td>\n",
+       "      <td>-0.007521</td>\n",
+       "      <td>-0.009416</td>\n",
+       "      <td>-0.006837</td>\n",
+       "      <td>-0.002355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000932</td>\n",
+       "      <td>0.002027</td>\n",
+       "      <td>0.002108</td>\n",
+       "      <td>-0.000042</td>\n",
+       "      <td>0.000667</td>\n",
+       "      <td>-0.000122</td>\n",
+       "      <td>0.000622</td>\n",
+       "      <td>0.001006</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.001428</td>\n",
+       "      <td>0.000945</td>\n",
+       "      <td>0.001272</td>\n",
+       "      <td>-0.000110</td>\n",
+       "      <td>0.003316</td>\n",
+       "      <td>0.001278</td>\n",
+       "      <td>0.000715</td>\n",
+       "      <td>0.000069</td>\n",
+       "      <td>0.000421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.012064</td>\n",
+       "      <td>0.013449</td>\n",
+       "      <td>0.015180</td>\n",
+       "      <td>0.002629</td>\n",
+       "      <td>0.005152</td>\n",
+       "      <td>0.003081</td>\n",
+       "      <td>0.005947</td>\n",
+       "      <td>0.007081</td>\n",
+       "      <td>0.002735</td>\n",
+       "      <td>0.009042</td>\n",
+       "      <td>0.009497</td>\n",
+       "      <td>0.010869</td>\n",
+       "      <td>0.024414</td>\n",
+       "      <td>0.020783</td>\n",
+       "      <td>0.009491</td>\n",
+       "      <td>0.009881</td>\n",
+       "      <td>0.006307</td>\n",
+       "      <td>0.003115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.126949</td>\n",
+       "      <td>0.190774</td>\n",
+       "      <td>0.319634</td>\n",
+       "      <td>0.018211</td>\n",
+       "      <td>0.086664</td>\n",
+       "      <td>0.030308</td>\n",
+       "      <td>0.057775</td>\n",
+       "      <td>0.089683</td>\n",
+       "      <td>0.026074</td>\n",
+       "      <td>0.089347</td>\n",
+       "      <td>0.165620</td>\n",
+       "      <td>0.132929</td>\n",
+       "      <td>0.381727</td>\n",
+       "      <td>0.218088</td>\n",
+       "      <td>0.185875</td>\n",
+       "      <td>0.088800</td>\n",
+       "      <td>0.072502</td>\n",
+       "      <td>0.027415</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              AMZN           BZ           CL       EURUSD         FTSE  \\\n",
+       "count  1474.000000  1474.000000  1474.000000  1474.000000  1474.000000   \n",
+       "mean      0.000730     0.000459     0.000695    -0.000064     0.000144   \n",
+       "std       0.021860     0.026032     0.032283     0.004541     0.010560   \n",
+       "min      -0.151398    -0.275751    -0.282206    -0.028144    -0.115117   \n",
+       "25%      -0.010712    -0.010812    -0.012833    -0.002664    -0.004293   \n",
+       "50%       0.000932     0.002027     0.002108    -0.000042     0.000667   \n",
+       "75%       0.012064     0.013449     0.015180     0.002629     0.005152   \n",
+       "max       0.126949     0.190774     0.319634     0.018211     0.086664   \n",
+       "\n",
+       "            GBPUSD           GC         GSPC          IEF         IXIC  \\\n",
+       "count  1474.000000  1474.000000  1474.000000  1474.000000  1474.000000   \n",
+       "mean     -0.000007     0.000486     0.000614    -0.000001     0.000759   \n",
+       "std       0.005813     0.009883     0.012827     0.004830     0.015394   \n",
+       "min      -0.042324    -0.051069    -0.127652    -0.025393    -0.131492   \n",
+       "25%      -0.003062    -0.004210    -0.004626    -0.002777    -0.006079   \n",
+       "50%      -0.000122     0.000622     0.001006     0.000000     0.001428   \n",
+       "75%       0.003081     0.005947     0.007081     0.002735     0.009042   \n",
+       "max       0.030308     0.057775     0.089683     0.026074     0.089347   \n",
+       "\n",
+       "               JPM         MSFT           NG         NVDA         ORCL  \\\n",
+       "count  1474.000000  1474.000000  1474.000000  1474.000000  1474.000000   \n",
+       "mean      0.000761     0.001056     0.000168     0.002570     0.000992   \n",
+       "std       0.019493     0.018448     0.044782     0.032806     0.019561   \n",
+       "min      -0.162106    -0.159453    -0.300480    -0.203980    -0.144972   \n",
+       "25%      -0.007790    -0.007495    -0.024382    -0.015220    -0.007521   \n",
+       "50%       0.000945     0.001272    -0.000110     0.003316     0.001278   \n",
+       "75%       0.009497     0.010869     0.024414     0.020783     0.009491   \n",
+       "max       0.165620     0.132929     0.381727     0.218088     0.185875   \n",
+       "\n",
+       "                SI          TLT       USDJPY  \n",
+       "count  1474.000000  1474.000000  1474.000000  \n",
+       "mean      0.000445    -0.000136     0.000249  \n",
+       "std       0.020250     0.010877     0.005739  \n",
+       "min      -0.123854    -0.069011    -0.037961  \n",
+       "25%      -0.009416    -0.006837    -0.002355  \n",
+       "50%       0.000715     0.000069     0.000421  \n",
+       "75%       0.009881     0.006307     0.003115  \n",
+       "max       0.088800     0.072502     0.027415  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_returns.describe()"
    ]
   }
  ],
