Improved statistical validation and Markdown refinement
- Enhanced description of log returns and anomaly treatment
- Refined z-score interpretation and diagnostic flag definitions
- Improved wording and clarity across section 2.6
- Minor markdown adjustment in 00_data_download notebook

--- a/notebooks/00_data_download.ipynb
+++ b/notebooks/00_data_download.ipynb
@@ -42,7 +42,26 @@
    "id": "ac3f8b5d",
    "metadata": {},
    "source": [
-    "#### **0.2 Asset universe**"
+    "#### **0.2 Asset universe**\n",
+    "\n",
+    "- **AMZN** – Amazon.com, Inc.\n",
+    "- **BZ=F** – Brent Crude Oil Futures\n",
+    "- **CL=F** – WTI Crude Oil Futures\n",
+    "- **EURUSD=X** – Euro / US Dollar\n",
+    "- **GC=F** – Gold Futures\n",
+    "- **GBPUSD=X** – British Pound / US Dollar\n",
+    "- **IEF** – iShares 7–10 Year Treasury Bond ETF\n",
+    "- **JPM** – JPMorgan Chase & Co.\n",
+    "- **MSFT** – Microsoft Corporation\n",
+    "- **NG=F** – Natural Gas Futures\n",
+    "- **NVDA** – NVIDIA Corporation\n",
+    "- **ORCL** – Oracle Corporation\n",
+    "- **SI=F** – Silver Futures\n",
+    "- **TLT** – iShares 20+ Year Treasury Bond ETF\n",
+    "- **USDJPY=X** – US Dollar / Japanese Yen\n",
+    "- **^FTSE** – FTSE 100 Index\n",
+    "- **^GSPC** – S&P 500 Index\n",
+    "- **^IXIC** – NASDAQ Composite Index"
    ]
   },
   {
