Add project README and finalize Phase 4 – portfolio construction
- Add initial README with project overview, roadmap and phase structure
- Add ^IRX as risk-free rate proxy and update 'asset_universe.csv'
- Re-run 01_data_cleaning to integrate ^IRX into the cleaned dataset
- Implement and store core portfolio KPIs: total return, annualised return, volatility, Sharpe ratio and max drawdown
- Apply minor markdown and documentation refinements across 00_data_download, 01_data_cleaning and 02_portfolio_construction notebooks

--- a/notebooks/00_data_download.ipynb
+++ b/notebooks/00_data_download.ipynb
@@ -7,11 +7,14 @@
    "source": [
     "## **0. Data donwload**\n",
     "\n",
-    "- This notebook downloads daily OHLCV data for the portfolio asset universe (equities, indices, FX, commodities, and bond ETFs) for the period 2019-2024 using Yahoo Finance (yfinance) and stores cleaned CSV files under `data/raw/prices`.\n",
+    "**OVERVIEW**\n",
+    "- This notebook downloads daily OHLCV data for the portfolio asset universe (equities, indices, FX, commodities, and bond ETFs) for the period 2019-2024 using **Yahoo Finance (yfinance)**.\n",
+    "- The **US treasury Bill 3M (3-month T-Bill)** is also extracted as a proxy for the risk-free rate for further KPIs calculations such as Sharpe Ratio. It's a worldwide accepted **`risk-free`** benchmark.\n",
+    "- All downloaded, cleaned data will be stored as CSV files under `data/raw/prices`.\n",
     "- These raw files will be the input for all subsequent steps: returns calculation, portfolio construction, risk metrics and optimization.\n",
     "- The `auto_adjust=True` argument from `yfinance` was used to choose **Adj_close** as my **Close** price\n",
     "\n",
-    "**RESULTS**\n",
+    "**SUMMARY RESULTS**\n",
     "- All assets were downloaded successfully and saved in `data/raw/prices`\n",
     "- Special characters ('^', '=F', '=X') were removed from **tickers** when defining file names"
    ]
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "1f049014",
    "metadata": {},
    "outputs": [],
@@ -61,12 +64,13 @@
     "- **USDJPY=X** – US Dollar / Japanese Yen\n",
     "- **^FTSE** – FTSE 100 Index\n",
     "- **^GSPC** – S&P 500 Index\n",
-    "- **^IXIC** – NASDAQ Composite Index"
+    "- **^IXIC** – NASDAQ Composite Index\n",
+    "- **^IRX** – 13 Week Treasury Bill"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "d6629170",
    "metadata": {},
    "outputs": [],
@@ -77,8 +81,9 @@
     "fx = [\"EURUSD=X\", \"GBPUSD=X\", \"USDJPY=X\"]\n",
     "commodities = [\"CL=F\", \"BZ=F\", \"NG=F\", \"GC=F\", \"SI=F\"]\n",
     "bonds = [\"TLT\", \"IEF\"]\n",
+    "rf_rate = [\"^IRX\"]\n",
     "\n",
-    "all_tickers = equities + indices + fx + commodities + bonds\n",
+    "all_tickers = equities + indices + fx + commodities + bonds + rf_rate\n",
     "\n",
     "# 2. Date range\n",
     "start_date = \"2019-01-01\"\n",
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "43449995",
    "metadata": {},
    "outputs": [
@@ -104,7 +109,7 @@
      "output_type": "stream",
      "text": [
       "All data downloaded successfully! ✅\n",
-      "18 files saved in C:\\Users\\james\\Desktop\\UK Life\\Data Scientist Career Path\\My notes (Python, SQL, etc.)\\Project Portfolios\\finance-project\\data\\raw\\prices\n"
+      "19 files saved in C:\\Users\\james\\Desktop\\UK Life\\Data Scientist Career Path\\My notes (Python, SQL, etc.)\\Portfolio of projects\\finance-project\\data\\raw\\prices\n"
      ]
     }
    ],
