Pipeline updates (assets, risk-free, notebooks, docs)
- Updated README with current project structure, setup and workflow notes
- Refreshed requirements.txt to match the stable working dependency set
- Updated asset_universe.csv (universe/metadata adjustments used by the pipeline)
- Added processed risk_free.csv as the risk-free source aligned to returns
- Refactored/updated notebooks:
  - 00_data_download.ipynb: download flow + saved outputs consistency
  - 01_data_cleaning.ipynb: cleaning/validation and return prep improvements
  - 02_portfolio_construction.ipynb: portfolio build logic aligned to latest data
  - 03_analysis_and_risk_*.ipynb: risk/analysis outputs and rendering fixes

--- a/notebooks/00_data_download.ipynb
+++ b/notebooks/00_data_download.ipynb
@@ -8,7 +8,7 @@
     "## **0. Data donwload**\n",
     "\n",
     "**OVERVIEW**\n",
-    "- This notebook downloads daily OHLCV data for the portfolio asset universe (equities, indices, FX, commodities, and bond ETFs) for the period 2019-2024 using **Yahoo Finance (yfinance)**.\n",
+    "- This notebook downloads daily OHLCV data for the portfolio asset universe (indices, FX, commodities, and bond ETFs) for the period 2019-2024 using **Yahoo Finance (yfinance)**.\n",
     "- The **US treasury Bill 3M (3-month T-Bill)** is also extracted as a proxy for the risk-free rate for further KPIs calculations such as Sharpe Ratio. It's a worldwide accepted **`risk-free`** benchmark.\n",
     "- All downloaded, cleaned data will be stored as CSV files under `data/raw/prices`.\n",
     "- These raw files will be the input for all subsequent steps: returns calculation, portfolio construction, risk metrics and optimization.\n",
@@ -29,14 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1f049014",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing necessary libraries\n",
+    "import re\n",
     "import pandas as pd\n",
     "import yfinance as yf\n",
+    "from typing import cast\n",
     "from src.helpers_io import raw_path"
    ]
   },
@@ -47,43 +49,31 @@
    "source": [
     "#### **0.2 Asset universe**\n",
     "\n",
-    "- **AMZN** – Amazon.com, Inc.\n",
-    "- **BZ=F** – Brent Crude Oil Futures\n",
-    "- **CL=F** – WTI Crude Oil Futures\n",
-    "- **EURUSD=X** – Euro / US Dollar\n",
-    "- **GC=F** – Gold Futures\n",
-    "- **GBPUSD=X** – British Pound / US Dollar\n",
+    "- **EURUSD=X** – Euro / US Dollar (FX spot pair)\n",
+    "- **GLD** – SPDR Gold Shares (Gold ETF)\n",
     "- **IEF** – iShares 7–10 Year Treasury Bond ETF\n",
-    "- **JPM** – JPMorgan Chase & Co.\n",
-    "- **MSFT** – Microsoft Corporation\n",
-    "- **NG=F** – Natural Gas Futures\n",
-    "- **NVDA** – NVIDIA Corporation\n",
-    "- **ORCL** – Oracle Corporation\n",
-    "- **SI=F** – Silver Futures\n",
-    "- **TLT** – iShares 20+ Year Treasury Bond ETF\n",
-    "- **USDJPY=X** – US Dollar / Japanese Yen\n",
-    "- **^FTSE** – FTSE 100 Index\n",
-    "- **^GSPC** – S&P 500 Index\n",
-    "- **^IXIC** – NASDAQ Composite Index\n",
-    "- **^IRX** – 13 Week Treasury Bill"
+    "- **SPY** – SPDR S&P 500 ETF Trust (US equity beta)\n",
+    "- **UNG** – United States Natural Gas Fund (Natural Gas ETF)\n",
+    "- **USDJPY=X** – US Dollar / Japanese Yen (FX spot pair)\n",
+    "- **USO** - United States Oil Fund (Crude Oil ETF)\n",
+    "- **^IRX** – 13 Week Treasury Bill (risk-free proxy, non-investable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "d6629170",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Asset universe\n",
-    "equities = [\"MSFT\", \"AMZN\", \"NVDA\", \"ORCL\", \"JPM\"]\n",
-    "indices = [\"^GSPC\", \"^IXIC\", \"^FTSE\"]\n",
-    "fx = [\"EURUSD=X\", \"GBPUSD=X\", \"USDJPY=X\"]\n",
-    "commodities = [\"CL=F\", \"BZ=F\", \"NG=F\", \"GC=F\", \"SI=F\"]\n",
-    "bonds = [\"TLT\", \"IEF\"]\n",
+    "indices = [\"SPY\"]\n",
+    "fx = [\"EURUSD=X\", \"USDJPY=X\"]\n",
+    "commodities = [\"GLD\", \"UNG\", \"USO\"]\n",
+    "bonds = [\"IEF\"]\n",
     "rf_rate = [\"^IRX\"]\n",
     "\n",
-    "all_tickers = equities + indices + fx + commodities + bonds + rf_rate\n",
+    "all_tickers = indices + fx + commodities + bonds + rf_rate\n",
     "\n",
     "# 2. Date range\n",
     "start_date = \"2019-01-01\"\n",
@@ -100,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "43449995",
    "metadata": {},
    "outputs": [
@@ -109,8 +99,77 @@
      "output_type": "stream",
      "text": [
       "All data downloaded successfully! ✅\n",
-      "19 files saved in C:\\Users\\james\\Desktop\\UK Life\\Data Scientist Career Path\\My notes (Python, SQL, etc.)\\Portfolio of projects\\finance-project\\data\\raw\\prices\n"
+      "8 files saved in C:\\Users\\james\\Desktop\\UK Life\\Data Scientist Career Path\\My notes (Python, SQL, etc.)\\Portfolio of projects\\finance-project\\data\\raw\\prices\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "c66b679f-992c-4f83-bee5-40804b1bd924",
+       "rows": [
+        [
+         "0",
+         "SPY_prices.csv"
+        ],
+        [
+         "1",
+         "EURUSD_prices.csv"
+        ],
+        [
+         "2",
+         "USDJPY_prices.csv"
+        ],
+        [
+         "3",
+         "GLD_prices.csv"
+        ],
+        [
+         "4",
+         "UNG_prices.csv"
+        ],
+        [
+         "5",
+         "USO_prices.csv"
+        ],
+        [
+         "6",
+         "IEF_prices.csv"
+        ],
+        [
+         "7",
+         "IRX_prices.csv"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 8
+       }
+      },
+      "text/plain": [
+       "['SPY_prices.csv',\n",
+       " 'EURUSD_prices.csv',\n",
+       " 'USDJPY_prices.csv',\n",
+       " 'GLD_prices.csv',\n",
+       " 'UNG_prices.csv',\n",
+       " 'USO_prices.csv',\n",
+       " 'IEF_prices.csv',\n",
+       " 'IRX_prices.csv']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -118,14 +177,27 @@
     "prices_dir = raw_path(\"prices\")\n",
     "prices_dir.mkdir(parents=True, exist_ok=True)   # Ensures 'prices' folder exists\n",
     "\n",
+    "# Function for advanced ticker cleaning\n",
+    "def cleaning_ticker(ticker: str) -> str:\n",
+    "    # Step 1: Handle Suffixes (remove =X, =F and everything after)\n",
+    "    clean_ticker = ticker.split('=')[0]\n",
+    "    \n",
+    "    # Step 2: Handle Prefixes (remove ^ only from start)\n",
+    "    clean_ticker = clean_ticker.lstrip('^')\n",
+    "    \n",
+    "    # Step 3: Sanitize (remove residual characters like '-' in BTC-USD)\n",
+    "    clean_ticker = re.sub(r'[^a-zA-Z0-9]', '', clean_ticker)\n",
+    "\n",
+    "    return clean_ticker\n",
+    "\n",
+    "# Downloading data\n",
+    "files_saved = []\n",
+    "\n",
     "for ticker in all_tickers:\n",
     "    # auto_adust = True -> Adj_close = Close\n",
     "    # progress = False -> No progress bar\n",
     "    # multi_level_index = False -> Avoids multi level index in the column names\n",
-    "    data = yf.download(ticker, start=start_date, end=end_date, auto_adjust=True, progress=False, multi_level_index=False)\n",
-    "\n",
-    "    # Converting 'data' into a 'DataFrame'\n",
-    "    data = pd.DataFrame(data)\n",
+    "    data = cast(pd.DataFrame, yf.download(ticker, start=start_date, end=end_date, auto_adjust=True, progress=False, multi_level_index=False))\n",
     "\n",
     "    # Basic sanity check\n",
     "    if data.empty:\n",
@@ -136,7 +208,8 @@
     "    data = data.reset_index()\n",
     "\n",
     "    # Clean filename (removing ^, =X, =F from tickers)\n",
-    "    filename = f\"{ticker.replace('^', '').replace('=X', '').replace('=F', '')}_prices.csv\"\n",
+    "    clean_ticker = cleaning_ticker(ticker)\n",
+    "    filename = f\"{clean_ticker}_prices.csv\"\n",
     "\n",
     "    # Full file path inside 'data/raw/prices'\n",
     "    filepath = prices_dir / filename\n",
@@ -144,11 +217,15 @@
     "    # Save as CSV in data/raw/prices\n",
     "    data.to_csv(filepath, index=False)\n",
     "\n",
+    "    # Storing files saved\n",
+    "    files_saved.append(filename)\n",
+    "\n",
     "print(\"All data downloaded successfully! ✅\")\n",
     "\n",
     "# 4. Checking files\n",
     "downloaded = len(list(prices_dir.glob(\"*.csv\")))\n",
-    "print(f\"{downloaded} files saved in {prices_dir}\")"
+    "print(f\"{downloaded} files saved in {prices_dir}\")\n",
+    "display(files_saved)"
    ]
   }
  ],
